# ncaws

./: .gitignore  Cargo.toml  README.md
src/: app.rs  aws.rs  main.rs  terminal.rs  ui.rs
