[package]
name = "ncaws"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# AWS SDK
aws-config = "1.1"
aws-sdk-ecs = "1.13"
aws-sdk-ec2 = "1.21"
aws-sdk-ssm = "1.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
